--- a/view/index.html
+++ b/view/index.html
@@ -47,29 +47,30 @@
                 <h2 style="flex-grow: 1; text-align: center;">Command Player2</h2>
             </div>
             <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
-                <div style="flex-grow: 1; text-align: center;">
+                <div style="flex-grow: 1; text-align: center;margin-bottom: -60%;margin-left: 1%;">
                     <img style="width: 100px; height: auto;" src="https://i.ibb.co/QcJKJT6/file1.png" >
                 </div>
       
-               <div style="flex-grow: 1; text-align: center;"> 
+               <div style="flex-grow: 1; text-align: center;margin-bottom: -60%;margin-left: 1%;"> 
                 <img style="width: 100px; height: auto;" src="https://i.ibb.co/GPtZjzx/arrow-key-removebg-preview.png" alt="fleches-directionelles">
                 </div>
             </div>
         </div>
 
         <div id="level2" class="overlay" style="display: flex; flex-direction: column; align-items: center; width: 100%; margin-top: 7%;">
+      
+           
             <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
-                <h2 style="flex-grow: 1; text-align: center;">Command Player1</h2>
-                <h2 style="flex-grow: 1; text-align: center;">Command Player2</h2>
-            </div>
-            <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
-                <div style="flex-grow: 1; text-align: center;">
+                <div style="flex-grow: 1; text-align: center;margin-bottom: -60%;margin-left: 1%;">
+                    <h2 style="flex-grow: 1; text-align: center;">Command Player1</h2>
                     <p>Spam "S" to run </p>
                     <img style="width: 100px; height: auto;" src="https://i.ibb.co/8YmgZPS/S-key.png" >
                  
                 </div>
       
-               <div style="flex-grow: 1; text-align: center;"> 
+               <div style="flex-grow: 1; text-align: center;margin-bottom: -60%;margin-left: 1%;"> 
+                
+                <h2 style="flex-grow: 1; text-align: center;">Command Player2</h2>
                 <p>Spam "K" to run </p>
                 <img style="width: 100px; height: auto;" src="https://i.ibb.co/2Zg00Cg/K-key-2.png" >
     
@@ -102,7 +103,7 @@
                 <h2 style="flex-grow: 1; text-align: center;margin-top: 10%;">Player1</h2>
                 <h2 style="flex-grow: 1; text-align: center;margin-top: 10%;">Player2</h2>
             </div>
-            <button id="restart" style=" border-radius: 100%; "> Try Again ?</button>
+            <button id="restart" style=" border-radius: 2%; "> Try Again ?</button>
         </div>
         
         
@@ -190,9 +191,6 @@
 
 </style>
 
-
-
-
 <style>
     
 
@@ -202,20 +200,24 @@
         font-size: 18px;
         width: 200px; /* Définir la largeur du bouton */
         height: 50px; /* Définir la hauteur du bouton */
-        border-radius: 100%; /* Ceci rendra le bouton complètement rond */
+        
         cursor: pointer;
         transition: background-color 0.3s, transform 0.2s;
         text-transform: uppercase;
-        
+        border: 2px solid  #17a2b8;
     }
 
     #restart:hover {
         background-color: #17a2b8; /* Bleu doux */
-        border-radius: 5%; /* Conserve le bord arrondi au survol */
+        color: white;
+      
     }
 
   
 
 </style>
+
+
+
 
 </html>
