--- a/view/index.html
+++ b/view/index.html
@@ -49,6 +49,9 @@
             <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
                 <div style="flex-grow: 1; text-align: center;margin-bottom: -60%;margin-left: 1%;">
                     <img style="width: 100px; height: auto;" src="https://i.ibb.co/QcJKJT6/file1.png" >
+                    
+                    <img style="width: 200px; height: auto;" src="https://i.ibb.co/2gQvGPq/WASD-f.png" >
+
                 </div>
       
                <div style="flex-grow: 1; text-align: center;margin-bottom: -60%;margin-left: 1%;"> 
@@ -87,7 +90,7 @@
             </div>
             <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
                 <div style="flex-grow: 1; text-align: center;">
-                    <p>Press "Shift" to Reload ball /  Press "Q" and "D" to Move / Press "Space bar"  to shoot  </p>
+                    <p>Press "Shift" to Reload ball /  Press "Q" or "A" and "D" to Move / Press "Space bar"  to shoot  </p>
                     <h2 id="pin1">/93</h2>
                 </div>
       
@@ -106,7 +109,9 @@
             <button id="restart" style=" border-radius: 2%; "> Try Again ?</button>
         </div>
         
-       
+        <button id="soundButton" style="position: fixed; bottom: 10px; right: 10px; border: none; background: none; cursor: pointer;">
+            <img src="https://i.ibb.co/HVZGNsW/pngegg.png" alt="Sound Icon" style="width: 50px; height: 50px;">
+        </button>
      
     <!-- Canvas pour le rendu 3D -->
     <canvas id="renderCanvas" style="width: 100%; height: 100%;"></canvas>
