--- a/view/index.html
+++ b/view/index.html
@@ -39,8 +39,10 @@
 
         <!-- Overlay pour le titre -->
         <div class="overlay">
-            
+      
+
         </div>
+        <input class="overlay"type="range" id="volumeSlider" min="0" max="100" value="10" style="position: fixed; bottom: 10px; right: 10px; " />
         <div id="level1" class="overlay" style="display: flex; flex-direction: column; align-items: center; width: 100%; margin-top: 5%;">
             <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
                 <h2 style="flex-grow: 1; text-align: center;">Command Player1</h2>
